2007-12-28  higepon  <higepon@users.sourceforge.jp>

        * Devel/gcc/rules.target.mak : Fixed ld flags.

        * Added Devel/gcc: go_0020s. Thx id:h0shu.

2007-10-20  higepon  <higepon@users.sourceforge.jp>

        * Multimedia/audio_server/happy/SongButton.h Added for clickable song title label.
                                                     Left aligned song titles.

2007-10-19  higepon  <higepon@users.sourceforge.jp>

        * Multimedia/audio_server/happy/GUIPlayer.cpp (GUIPlayer::playLoop): You can click a song title button.

2007-10-13  higepon  <higepon@users.sourceforge.jp>

        * Shells/mshell/Terminal.cpp (Terminal::write): Speed up drawing.

        * Shells/mshell/Form1.cpp (StdoutMessageLoop): Fixed a Scheme shell killed on (ps) bug.

2007-10-05  higepon  <higepon@users.sourceforge.jp>

        * Added Graphics/MesaDemo. Not tested.

        * Gui/monafile/FileManager.cpp (class FileManager): Added player icon for Happy.

2007-10-04  nikq

        * Multimedia/audio_server/happy/startup.ogg : Added start up sound.

2007-10-02  higepon  <higepon@users.sourceforge.jp>

        * Multimedia/audio_server_hige/es1370.cpp (es1370_new): change buffer size from 8192 * 10 to 8192 to 100.

2007-09-24  higepon  <higepon@users.sourceforge.jp>

        * Games/mtorz/mtorz.cpp (main): Removed MonaMain.

2007-09-12  higepon  <higepon@users.sourceforge.jp>

        * Multimedia/audio_server2/audio_server.cpp (stream_block_reader): Added stream->waitForRead().

        * Multimedia/audio_server2/happy/main.cpp : Added happy music player for ogg using audio_server. Doesn't work now.

2007-07-08  higepon  <higepon@users.sourceforge.jp>

        * Net/net_server_with_kernel/uipLoop.cpp : Added uipLoop for listen loop.

        * Net/uip/Mona/main.cpp (thread_init): Use new mthread_create.

        * Gui/libbaygui/lang/Thread.cpp: Use new mthread_create.

2007-07-07  higepon  <higepon@users.sourceforge.jp>
