@@ -1,3 +1,7 @@
+2009-05-17  higepon  <higepon@users.sourceforge.jp>
+
+        * Misc/helloworld/main.cpp : ARP req/rep works.
+
 2007-12-28  higepon  <higepon@users.sourceforge.jp>
 
         * Devel/gcc/rules.target.mak : Fixed ld flags.
